...

    <RadioGroup android:id="@+id/profile_options"
        android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <RadioButton
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:onClick="onMagicRadioButtonClicked"
            android:id="@+id/magic_option"
            android:text="@string/magic_option"/>
        <RadioButton
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:onClick="onHealthyRadioButtonClicked"
            android:id="@+id/healthy_option"
            android:text="@string/healthy_option"/>
...
    </RadioGroup>

    <ListView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/profile_options"
        android:paddingTop="16dp" android:paddingLeft="8dp"
        android:id="@+id/suggested_products_list" />

</RelativeLayout>

