...
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include layout="@layout/content_choose_profile_and_product" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
...
