<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/profileOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/magic_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magic_option" />
        <RadioButton
            android:id="@+id/healthy_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healthy_option" />
        <RadioButton
            android:id="@+id/expert_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expert_option" />
        <RadioButton
            android:id="@+id/gourmet_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gourmet_option" />
    </RadioGroup>

    <ListView
        android:id="@+id/productsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileOptions"
        android:paddingTop="@dimen/space_between_content_areas"
        android:paddingStart="@dimen/screen_edge_horizontal_margins_mobile"/>

</RelativeLayout>
