<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/edge_from_card_view_mobile"
    android:layout_marginStart="@dimen/edge_from_card_view_mobile"
    android:layout_marginEnd="@dimen/edge_from_card_view_mobile"
    android:layout_marginBottom="@dimen/space_between_content_areas"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_show_advised_product_details">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:layout_marginLeft="@dimen/edge_from_card_view_mobile"
        android:layout_marginRight="@dimen/edge_from_card_view_mobile"
        android:layout_marginBottom="@dimen/edge_from_card_view_mobile"
        android:elevation="2dp">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:orientation="horizontal"
            android:useDefaultMargins="true">

            <TextView
                android:layout_gravity="start"
                android:layout_columnSpan="2"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_description" />

            <TextView
                android:layout_gravity="start"
                android:text="@string/item_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/productName"
                android:layout_gravity="start"
                android:ems="10"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="start"
                android:text="@string/item_price"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="start"
                android:text="@string/item_reputation"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/productReputation"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_column="0"
                android:layout_gravity="start"
                android:text="@string/item_fat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/productFat"
                android:layout_gravity="start"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/space_between_content_areas"
        android:layout_marginLeft="@dimen/edge_from_card_view_mobile"
        android:layout_marginRight="@dimen/edge_from_card_view_mobile"
        android:layout_marginBottom="@dimen/edge_from_card_view_mobile"
        android:elevation="2dp">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:orientation="horizontal"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/aboutLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:text="@string/item_source_of_info"
                android:textStyle="bold" />
        </GridLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>